--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,11 +6,8 @@
 }
 
 body{
-    font: Arial, Helvetica, sans-serif;
-    background-color: darkgreen;
-    color: darkgrey;
-
-    h1{
-        font-size: 100px ;
-    }
+    font: 16px "Helvetica Neue", sans-serif;
+    
+    color: #121214;
+   
 }
